Fix image paths and adjust card spacing
- Updated CSS background image paths from static/img/ to /img/ to fix missing generation icons
- Optimized vertical spacing in generation selection cards:
  - Set bottom-wrap gap to 0px (between description and Select button)
  - Set bottom padding to 0px in teaser-content
  - Added marginTop: -12px to Select button to reduce excessive spacing
  - Added margin-bottom: 0 and padding-bottom: 0 to text wrappers

Cards now have tighter, more balanced spacing around the Select button.

--- a/src/screens/Generation/style.css
+++ b/src/screens/Generation/style.css
@@ -86,7 +86,7 @@
   flex-direction: column;
   gap: 32px;
   overflow: hidden;
-  padding: 40px 32px;
+  padding: 40px 32px 0px 32px;
   position: relative;
   width: 373px;
 }
@@ -102,7 +102,7 @@
 }
 
 .generation .image-placeholder {
-  background-image: url(../../../static/img/image-placeholder.png);
+  background-image: url(/img/image-placeholder.png);
   background-position: 50% 50%;
   background-size: cover;
   border-radius: 99px;
@@ -126,7 +126,7 @@
   display: flex;
   flex: 0 0 auto;
   flex-direction: column;
-  gap: 24px;
+  gap: 0px;
   position: relative;
   width: 100%;
 }
@@ -170,6 +170,8 @@
   overflow: hidden;
   position: relative;
   text-overflow: ellipsis;
+  margin-bottom: 0;
+  padding-bottom: 0;
 }
 
 .generation .tertiary-instance {
@@ -184,7 +186,7 @@
 }
 
 .generation .image-placeholder-2 {
-  background-image: url(../../../static/img/image-placeholder-1.png);
+  background-image: url(/img/image-placeholder-1.png);
   background-position: 50% 50%;
   background-size: cover;
   border-radius: 99px;
@@ -201,7 +203,7 @@
 }
 
 .generation .image-placeholder-3 {
-  background-image: url(../../../static/img/image-placeholder-2.png);
+  background-image: url(/img/image-placeholder-2.png);
   background-position: 50% 50%;
   background-size: cover;
   border-radius: 99px;
@@ -224,7 +226,7 @@
 }
 
 .generation .image-placeholder-4 {
-  background-image: url(../../../static/img/image-placeholder-3.png);
+  background-image: url(/img/image-placeholder-3.png);
   background-position: 50% 50%;
   background-size: cover;
   border-radius: 99px;
