--- a/src/screens/SelectedGeneration/style.css
+++ b/src/screens/SelectedGeneration/style.css
@@ -86,7 +86,7 @@
   flex-direction: column;
   gap: 32px;
   overflow: hidden;
-  padding: 40px 32px;
+  padding: 40px 32px 0px 32px;
   position: relative;
   width: 373px;
 }
@@ -124,7 +124,7 @@
   display: flex;
   flex: 0 0 auto;
   flex-direction: column;
-  gap: 24px;
+  gap: 0px;
   position: relative;
   width: 100%;
 }
@@ -151,6 +151,8 @@
   line-height: var(--heading-04-line-height);
   margin-top: -1.00px;
   position: relative;
+  margin-bottom: 0;
+  padding-bottom: 0;
 }
 
 .selected-generation .component-1 {
